--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
     </table> 
     
-    <h2><a href="/contact.html">Contact</a></h2>
+    <h2><a href="contact.html">Contact</a></h2>
    
     <h3>Course</h3>
     <ul>
