--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
    <p>phone-8123416085</p> 
    <p>email - shivut451@gmail.com</p>
-   <p>facebook - <a href="<strong><a href="https://www.facebook.com/">Facebook</a></strong>">facebook</a></p>
+   <p>facebook - <a href="https://www.facebook.com/"> <strong>Facebook</strong> </a></p>
    <form  action="mailto:shivnarayanthakur077@gmail.com" method="" enctype="" >
    <label>Your Name:</label>
     <input type="text" name="Your Name" value="">
