--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Contact</title>
+    <title>Contact Me Here</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <p>phone-8123416085</p> 
-   <p>email - shivut451@gmail.com</p>
-   <p>facebook - <a href="https://www.facebook.com/shivnarayan.thakur.923/"> <strong>Facebook</strong> </a></p>
+<body >
+   <p>Phone:8123416085</p> 
+   <p>Email:shivut451@gmail.com</p>
+   <p>Facebook: <a href="https://www.facebook.com/shivnarayan.thakur.923/"> <strong>Facebook</strong> </a></p>
    <form  action="mailto:shivnarayanthakur077@gmail.com" method="" enctype="" >
    <label>Your Name:</label>
     <input type="text" name="Your Name" value="">
     <br>
-    <label>Email:</label>
+    <label> Your Email:</label>
     <input type="email" name="Yourname" id=""><br>
-    <label>Your Message</label><br>
+    <label>Your Message:</label><br>
     <textarea name="your Message" id="" cols="30" rows="10"></textarea>
     <input type="checkbox" name="" id="">
     <input type="Submit" name="" id="">
