--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shivu's personal Site</title>
+    <title>Shiv Narayan</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <table cellspacing="20">
@@ -17,8 +18,8 @@
         
     </table> 
     
-    <h2><a href="contact.html">Contact</a></h2>
-   
+    <h2><a href="/contact.html">Contact</a></h2>
+    <hr>
     <h3>Course</h3>
     <ul>
         <li>Information Science and engineering</li>
@@ -26,6 +27,7 @@
         <li>maths</li>
         <li>web development</li>
     </ul>
+    <hr>
     <h3>My Hobbies</h3>
     <ol>
         <li>cricket</li>
