--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </table> 
     
-    <h2><a href="/contact.html">Contact</a></h2>
+    <h2><a href="/contact.html">/Contact</a></h2>
     <hr>
     <h3>Course</h3>
     <ul>
