--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiv Narayan</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <table cellspacing="20">
@@ -18,7 +18,7 @@
         
     </table> 
     
-    <h2><a href="/contact.html">/Contact</a></h2>
+    <h2><a href="contact.html">Contact</a></h2>
     <hr>
     <h3>Course</h3>
     <ul>
