--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <td><img src="shivu.jpeg"  height="100" alt="Shivu"></td>
             <td><h1>Shiv Narayan Thakur</h1>
                 <p> <em>B.E. Students</em> </p>
-                <p>I am Btech student specialized in informaton science.<strong><a href="https://www.facebook.com/shivnarayan.thakur.923/">Facebook</a></strong></p></td>
+                <p>I am Btech student specialized in Informaton Science and Engineering.</p></td>
         </tr>
         
     </table> 
